--- a/CriminalIntent/app/src/main/res/layout/fragment_crime.xml
+++ b/CriminalIntent/app/src/main/res/layout/fragment_crime.xml
@@ -2,7 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_margin="16dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginTop="8dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -36,6 +38,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/crime_solved_label"/>
+
+    <Button
+        android:id="@+id/jtlast_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Jump to Last">
+
+    </Button>
+
+    <Button
+        android:id="@+id/jtfirst_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Jump to First">
+
+    </Button>
 
 
 </LinearLayout>
