draw over app permission

--- a/dictening/app/src/main/res/layout/activity_main.xml
+++ b/dictening/app/src/main/res/layout/activity_main.xml
@@ -41,5 +41,17 @@
 
     </Button>
 
+    <Button
+        android:id="@+id/show_chathead"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        android:text="Chat Head"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/select_file" />
+
 
 </android.support.constraint.ConstraintLayout>
