start list storage in recycleview

--- a/dictateningprov2/app/src/main/res/layout/activity_files.xml
+++ b/dictateningprov2/app/src/main/res/layout/activity_files.xml
@@ -6,8 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".FilesActivity">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/file_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_ff_up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="10dp"
+        android:clickable="true"
+        app:srcCompat="?attr/homeAsUpIndicator"
+        tools:focusable="auto" />
 </FrameLayout>
