List file system system successfully at first stage but has seriously bug

--- a/dictateningprov2/app/src/main/res/layout/ff_item.xml
+++ b/dictateningprov2/app/src/main/res/layout/ff_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:padding="10dp">
 
     <ImageView
@@ -26,9 +26,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ellipsize="end"
-        tools:text="rtrtrtrtrtrtrtrtrtrtrtrtrtrr"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ff_icon"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="rtrtrtrtrtrtrtrtrtrtrtrtrtrr" />
 </android.support.constraint.ConstraintLayout>
