--- a/dictateningprov2/app/src/main/res/menu/menu_main.xml
+++ b/dictateningprov2/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_exit"
+        android:orderInCategory="200"
+        android:title="@string/action_exit"
+        android:icon="@drawable/exit_to_app"
+        app:showAsAction="withText|ifRoom" />
 </menu>
