--- a/dictateningprov2/app/src/main/res/layout/activity_files.xml
+++ b/dictateningprov2/app/src/main/res/layout/activity_files.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FilesActivity">
+    tools:context=".StorageActivity">
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/file_list"
