--- a/dictateningprov2/app/src/main/res/drawable/skip_backward.xml
+++ b/dictateningprov2/app/src/main/res/drawable/skip_backward.xml
@@ -4,5 +4,5 @@
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#000" android:pathData="M20,5V19L13,12M6,5V19H4V5M13,5V19L6,12" />
+    <path android:fillColor="#FFF" android:pathData="M20,5V19L13,12M6,5V19H4V5M13,5V19L6,12" />
 </vector>
