--- a/dictateningprov2/app/src/main/res/drawable/skip_forward.xml
+++ b/dictateningprov2/app/src/main/res/drawable/skip_forward.xml
@@ -4,5 +4,5 @@
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#000" android:pathData="M4,5V19L11,12M18,5V19H20V5M11,5V19L18,12" />
+    <path android:fillColor="#FFF" android:pathData="M4,5V19L11,12M18,5V19H20V5M11,5V19L18,12" />
 </vector>
