--- a/dictateningprov2/app/src/main/res/layout/activity_main.xml
+++ b/dictateningprov2/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="right"
-            android:text="10:55"
+            android:text="--:--"
             app:layout_constraintEnd_toEndOf="@+id/seekbar"
             app:layout_constraintTop_toBottomOf="@+id/seekbar" />
 
