--- a/dictateningprov2/app/src/main/res/menu/menu_main.xml
+++ b/dictateningprov2/app/src/main/res/menu/menu_main.xml
@@ -3,9 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.vdroid.dictateningprov2.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/select_file"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/select_file"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/save_text"
+        android:orderInCategory="100"
+        android:title="@string/save_text_only"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_exit"
