add save file to SDcard function - android 7

--- a/dictateningprov2/app/src/main/res/layout/activity_main.xml
+++ b/dictateningprov2/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
             android:layout_marginTop="70dp"
             android:background="@drawable/roundedbutton"
             android:src="@drawable/play"
+            android:focusable="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
