--- a/dictateningprov2/app/src/main/res/layout/ff_item.xml
+++ b/dictateningprov2/app/src/main/res/layout/ff_item.xml
@@ -25,7 +25,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:ellipsize="end"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:drawablePadding="5dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ff_icon"
