--- a/dictateningprov2/app/src/main/res/menu/menu_main.xml
+++ b/dictateningprov2/app/src/main/res/menu/menu_main.xml
@@ -13,8 +13,18 @@
         android:title="@string/save_text_only"
         app:showAsAction="never" />
     <item
-        android:id="@+id/clear_text"
+        android:id="@+id/save_progress"
         android:orderInCategory="103"
+        android:title="@string/save_progress"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/load_progress"
+        android:orderInCategory="104"
+        android:title="@string/load_progress"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/clear_text"
+        android:orderInCategory="105"
         android:title="@string/clear_text"
         app:showAsAction="never" />
     <item
